[gd_scene load_steps=2 format=3 uid="uid://d1ncydtbnnjsu"]

[ext_resource type="Script" uid="uid://c6xdv2sujw81s" path="res://scripts/ui/entry_list_item.gd" id="1_87mkb"]

[node name="EntryListItem" type="PanelContainer"]
custom_minimum_size = Vector2(180, 200)
script = ExtResource("1_87mkb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GameImage" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="EntryInfo" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/EntryInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "作品标题"
text_overrun_behavior = 3

[node name="Author" type="Label" parent="MarginContainer/VBoxContainer/EntryInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.65098, 0.65098, 0.65098, 1)
theme_override_font_sizes/font_size = 12
text = "作者名称"
text_overrun_behavior = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DevlogIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="DevlogLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "开发日志"

[node name="WeightContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/WeightContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "权重: "

[node name="Weight" type="SpinBox" parent="MarginContainer/VBoxContainer/WeightContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[connection signal="value_changed" from="MarginContainer/VBoxContainer/WeightContainer/Weight" to="." method="_on_weight_value_changed"]
